--- a/WatchFun/src/main/resources/templates/about_us.html
+++ b/WatchFun/src/main/resources/templates/about_us.html
@@ -3,15 +3,26 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>About Us</title>
-<link rel="stylesheet" type="text/css"  href="/css/style.css">
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css"  href="/css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="/fonts/font-awesome/css/font-awesome.css">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+<link rel="stylesheet" type="text/css"
+	href="/fonts/font-awesome/css/font-awesome.css">
 </head>
 <div th:insert="~{header :: header}"></div>
 <body>
-<h2>We are trying to develop a beautiful Website.</h2>
+	<div class="wrapper">
+		<div class="content">
+			<h2>We are trying to develop a beautiful Website.</h2>
+		</div>
+		
+	</div>
+	<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
+<div class="footerLocation" th:insert="~{footer :: footer}"></div>
 </html>
