Novel , TVSeries and Movies Completely working. Their Description Page is also working.

--- a/WatchFun/src/main/resources/static/css/style.css
+++ b/WatchFun/src/main/resources/static/css/style.css
@@ -701,7 +701,7 @@ ol.navbarIcon li a:hover {
 
 /*  BROWSE DROPDOWN*/
 .dropbtn {
-	background-color: #f6f6f6;
+	background : transparent;
 	padding: 8px 20px;
 	text-decoration: none;
 	border: none;
