--- a/WatchFun/src/main/resources/templates/browse_all_tvseries.html
+++ b/WatchFun/src/main/resources/templates/browse_all_tvseries.html
@@ -65,10 +65,10 @@
 														Year <span class="glyphicon glyphicon-chevron-down"></span>
 													</button>
 													<div class="dropdown-content">
-														<a th:href="@{/year/2010}">2010+</a> 
-														<a th:href="@{/year/2000}">2000+</a>
-														<a th:href="@{/year/1990}">1990+</a>
-														<a th:href="@{/year/1980}">1980+</a>
+														<a th:href="@{/tvseries/year/2010}">2010+</a> 
+														<a th:href="@{/tvseries/year/2000}">2000+</a>
+														<a th:href="@{/tvseries/year/1990}">1990+</a>
+														<a th:href="@{/tvseries/year/1980}">1980+</a>
 													</div>
 												</div></li>
       <li><div class="dropdown">
@@ -76,30 +76,31 @@
 														Genre <span class="glyphicon glyphicon-chevron-down"></span>
 													</button>
 													<div class="dropdown-content">
-														<a th:href="@{/genre/Comedy}">Comedy</a>
-														<a th:href="@{/genre/Adventure}">Adventure</a>
-														<a th:href="@{/genre/Animation}">Animation</a>
-														<a th:href="@{/genre/Sci-fi}">Sci-fi</a>
-														<a th:href="@{/genre/Biography}">Biography</a>
-														<a th:href="@{/genre/Crime}">Crime</a>
-														<a th:href="@{/genre/Documentary}">Documentary</a>
-														<a th:href="@{/genre/Drama}">Drama</a>
-														<a th:href="@{/genre/Family}">Family</a>
-														<a th:href="@{/genre/Fantasy}">Fantasy</a>
-														<a th:href="@{/genre/Film-Noir}">Film-Noir</a>
-														<a th:href="@{/genre/Game-show}">Game-Show</a>
-														<a th:href="@{/genre/History}">History</a>
-														<a th:href="@{/genre/Horror}">Horror</a>
-														<a th:href="@{/genre/Music}">Music</a>
-														<a th:href="@{/genre/Musical}">Musical</a>
-														<a th:href="@{/genre/Mystery}">Mystery</a>
-														<a th:href="@{/genre/Romance}">Romance</a>
-														<a th:href="@{/genre/Sports}">Sports</a>
-														<a th:href="@{/genre/Reality-TV}">Reality-TV</a>
-														<a th:href="@{/genre/Thriller}">Thriller</a>
-														<a th:href="@{/genre/War}">War</a>
-														<a th:href="@{/genre/Western}">Western</a>
-														<a th:href="@{/genre/Talk-Show}">Talk-Show</a>
+														<a th:href="@{/tvseries/genre/Comic}">Comic</a>
+														<a th:href="@{/tvseries/genre/Comedy}">Comedy</a>
+														<a th:href="@{/tvseries/genre/Adventure}">Adventure</a>
+														<a th:href="@{/tvseries/genre/Animation}">Animation</a>
+														<a th:href="@{/tvseries/genre/Sci-fi}">Sci-fi</a>
+														<a th:href="@{/tvseries/genre/Biography}">Biography</a>
+														<a th:href="@{/tvseries/genre/Crime}">Crime</a>
+														<a th:href="@{/tvseries/genre/Documentary}">Documentary</a>
+														<a th:href="@{/tvseries/genre/Drama}">Drama</a>
+														<a th:href="@{/tvseries/genre/Family}">Family</a>
+														<a th:href="@{/tvseries/genre/Fantasy}">Fantasy</a>
+														<a th:href="@{/tvseries/genre/Film-Noir}">Film-Noir</a>
+														<a th:href="@{/tvseries/genre/Game-show}">Game-Show</a>
+														<a th:href="@{/tvseries/genre/History}">History</a>
+														<a th:href="@{/tvseries/genre/Horror}">Horror</a>
+														<a th:href="@{/tvseries/genre/Music}">Music</a>
+														<a th:href="@{/tvseries/genre/Musical}">Musical</a>
+														<a th:href="@{/tvseries/genre/Mystery}">Mystery</a>
+														<a th:href="@{/tvseries/genre/Romance}">Romance</a>
+														<a th:href="@{/tvseries/genre/Sports}">Sports</a>
+														<a th:href="@{/tvseries/genre/Reality-TV}">Reality-TV</a>
+														<a th:href="@{/tvseries/genre/Thriller}">Thriller</a>
+														<a th:href="@{/tvseries/genre/War}">War</a>
+														<a th:href="@{/tvseries/genre/Western}">Western</a>
+														<a th:href="@{/tvseries/genre/Talk-Show}">Talk-Show</a>
 													</div>
 												</div> </li>
       <li><div class="dropdown">
@@ -107,16 +108,16 @@
 														Rating <span class="glyphicon glyphicon-chevron-down"></span>
 													</button>
 													<div class="dropdown-content">
-														<a th:href="@{/rating/10}">10</a>
-														<a th:href="@{/rating/9}">9+</a>
-														<a th:href="@{/rating/8}">8+</a>
-														<a th:href="@{/rating/7}">7+</a>
-														<a th:href="@{/rating/6}">6+</a>
-														<a th:href="@{/rating/5}">5+</a>
-														<a th:href="@{/rating/4}">4+</a>
-														<a th:href="@{/rating/3}">3+</a>
-														<a th:href="@{/rating/2}">2+</a>
-														<a th:href="@{/rating/1}">1+</a>
+														<a th:href="@{/tvseries/rating/10}">10</a>
+														<a th:href="@{/tvseries/rating/9}">9+</a>
+														<a th:href="@{/tvseries/rating/8}">8+</a>
+														<a th:href="@{/tvseries/rating/7}">7+</a>
+														<a th:href="@{/tvseries/rating/6}">6+</a>
+														<a th:href="@{/tvseries/rating/5}">5+</a>
+														<a th:href="@{/tvseries/rating/4}">4+</a>
+														<a th:href="@{/tvseries/rating/3}">3+</a>
+														<a th:href="@{/tvseries/rating/2}">2+</a>
+														<a th:href="@{/tvseries/rating/1}">1+</a>
 													</div>
 												</div></li>
       <li>	<div class="dropdown">
@@ -124,9 +125,9 @@
 														Language <span class="glyphicon glyphicon-chevron-down"></span>
 													</button>
 													<div class="dropdown-content">
-														<a th:href="@{/language/English}">English</a>
-														<a th:href="@{/language/Chinese}">Chinese</a>
-														<a th:href="@{/language/Hindi}">Hindi</a>
+														<a th:href="@{/tvseries/language/English}">English</a>
+														<a th:href="@{/tvseries/language/Chinese}">Chinese</a>
+														<a th:href="@{/tvseries/language/Hindi}">Hindi</a>
 													</div>
 												</div></li>
     </ol>
@@ -144,26 +145,26 @@
 
 	<!--1 starts -->
 
-	<!-- Movies Section -->
+	<!-- tvseries Section -->
 	
 	<div class="row">
-      <div th:each="movie : ${mov}">
+      <div th:each="tvserie : ${tvs}">
 
 
-     <!-- MOVIE ITEM-->
+     <!-- tvseries ITEM-->
 
 
         <div class="col-sm-6 col-md-3 col-lg-3 "> 
-          <div class="watchfun-item">
-            <div class="hover-bg"> <a  th:href="@{'~/movie/'+${movie.id}}" th:title="${movie.name}" data-lightbox-gallery="gallery1">
+          <div class="watchfun-tvseries">
+            <div class="hover-bg"> <a  th:href="@{'~/tvseries/'+${tvserie.id}}" th:title="${tvserie.name}" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4 th:text="${movie.rating}"></h4>
+                <h4 th:text="${tvserie.rating}"></h4>
               </div>
-              <img  th:src="@{${movie.img}}" class="img-responsive" > </a> </div>
+              <img  th:src="@{${tvserie.img}}" class="img-responsive" > </a> </div>
           </div>
           <!-- element button-->        
           <ol class="downloadlink">            
-            <li><a th:href="@{${movie.downloadLink}}" >Download</a></li>
+            <li><a th:href="@{${tvserie.downloadLink}}" >Download</a></li>
           </ol>      
           <!-- element button ends-->
         </div>
@@ -172,75 +173,23 @@
     </div>
 	
 	<div class="row">
-      <div th:each="movie : ${moviesByLanguage}">
+      <div th:each="tvserie : ${tvseriesByLanguage}">
 
 
-     <!-- MOVIE ITEM-->
-
-
-        <div class="col-sm-6 col-md-3 col-lg-3 "> 
-          <div class="watchfun-item">
-            <div class="hover-bg"> <a  th:href="@{'~/movie/'+${movie.id}}" th:title="${movie.name}" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4 th:text="${movie.rating}"></h4>
-              </div>
-              <img  th:src="@{${movie.img}}" class="img-responsive" > </a> </div>
-          </div>
-          <!-- element button-->        
-          <ol class="downloadlink">            
-            <li><a th:href="@{${movie.downloadLink}}" >Download</a></li>
-          </ol>      
-          <!-- element button ends-->
-        </div>
-      </div>
-      <!-- Element ends-->
-    </div>
-    
-    
-    <div class="row">
-      <div th:each="movie : ${moviesByYear}">
-
-
-     <!-- MOVIE ITEM-->
+     <!-- tvseries ITEM-->
 
 
         <div class="col-sm-6 col-md-3 col-lg-3 "> 
-          <div class="watchfun-item">
-            <div class="hover-bg"> <a  th:href="@{'~/movie/'+${movie.id}}" th:title="${movie.name}" data-lightbox-gallery="gallery1">
+          <div class="watchfun-tvseries">
+            <div class="hover-bg"> <a  th:href="@{'~/tvserie/'+${tvserie.id}}" th:title="${tvserie.name}" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4 th:text="${movie.rating}"></h4>
+                <h4 th:text="${tvserie.rating}"></h4>
               </div>
-              <img  th:src="@{${movie.img}}" class="img-responsive" > </a> </div>
+              <img  th:src="@{${tvserie.img}}" class="img-responsive" > </a> </div>
           </div>
           <!-- element button-->        
           <ol class="downloadlink">            
-            <li><a th:href="@{${movie.downloadLink}}" >Download</a></li>
-          </ol>      
-          <!-- element button ends-->
-        </div>
-      </div>
-      <!-- Element ends-->
-    </div>
-    
-    
-    <div class="row">
-      <div th:each="movie : ${moviesByRating}">
-
-
-     <!-- MOVIE ITEM-->
-
-
-        <div class="col-sm-6 col-md-3 col-lg-3 "> 
-          <div class="watchfun-item">
-            <div class="hover-bg"> <a  th:href="@{'~/movie/'+${movie.id}}" th:title="${movie.name}" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4 th:text="${movie.rating}"></h4>
-              </div>
-              <img  th:src="@{${movie.img}}" class="img-responsive" > </a> </div>
-          </div>
-          <!-- element button-->        
-          <ol class="downloadlink">            
-            <li><a th:href="@{${movie.downloadLink}}" >Download</a></li>
+            <li><a th:href="@{${tvserie.downloadLink}}" >Download</a></li>
           </ol>      
           <!-- element button ends-->
         </div>
@@ -249,29 +198,81 @@
     </div>
     
     <div class="row">
-      <div th:each="movie : ${moviesByGenre}">
+      <div th:each="tvserie : ${tvseriesByYear}">
 
 
-     <!-- MOVIE ITEM-->
+     <!-- tvseries ITEM-->
 
 
         <div class="col-sm-6 col-md-3 col-lg-3 "> 
-          <div class="watchfun-item">
-            <div class="hover-bg"> <a  th:href="@{'~/movie/'+${movie.id}}" th:title="${movie.name}" data-lightbox-gallery="gallery1">
+          <div class="watchfun-tvseries">
+            <div class="hover-bg"> <a  th:href="@{'~/tvserie/'+${tvserie.id}}" th:title="${tvserie.name}" data-lightbox-gallery="gallery1">
               <div class="hover-text">
-                <h4 th:text="${movie.rating}"></h4>
+                <h4 th:text="${tvserie.rating}"></h4>
               </div>
-              <img  th:src="@{${movie.img}}" class="img-responsive" > </a> </div>
+              <img  th:src="@{${tvserie.img}}" class="img-responsive" > </a> </div>
           </div>
           <!-- element button-->        
           <ol class="downloadlink">            
-            <li><a th:href="@{${movie.downloadLink}}" >Download</a></li>
+            <li><a th:href="@{${tvserie.downloadLink}}" >Download</a></li>
           </ol>      
           <!-- element button ends-->
         </div>
       </div>
       <!-- Element ends-->
     </div>
+    
+    <div class="row">
+      <div th:each="tvserie : ${tvseriesByRating}">
+
+
+     <!-- tvseries ITEM-->
+
+
+        <div class="col-sm-6 col-md-3 col-lg-3 "> 
+          <div class="watchfun-tvseries">
+            <div class="hover-bg"> <a  th:href="@{'~/tvserie/'+${tvserie.id}}" th:title="${tvserie.name}" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <h4 th:text="${tvserie.rating}"></h4>
+              </div>
+              <img  th:src="@{${tvserie.img}}" class="img-responsive" > </a> </div>
+          </div>
+          <!-- element button-->        
+          <ol class="downloadlink">            
+            <li><a th:href="@{${tvserie.downloadLink}}" >Download</a></li>
+          </ol>      
+          <!-- element button ends-->
+        </div>
+      </div>
+      <!-- Element ends-->
+    </div>
+    
+    <div class="row">
+      <div th:each="tvserie : ${tvseriesByGenre}">
+
+
+     <!-- tvseries ITEM-->
+
+
+        <div class="col-sm-6 col-md-3 col-lg-3 "> 
+          <div class="watchfun-tvseries">
+            <div class="hover-bg"> <a  th:href="@{'~/tvserie/'+${tvserie.id}}" th:title="${tvserie.name}" data-lightbox-gallery="gallery1">
+              <div class="hover-text">
+                <h4 th:text="${tvserie.rating}"></h4>
+              </div>
+              <img  th:src="@{${tvserie.img}}" class="img-responsive" > </a> </div>
+          </div>
+          <!-- element button-->        
+          <ol class="downloadlink">            
+            <li><a th:href="@{${tvserie.downloadLink}}" >Download</a></li>
+          </ol>      
+          <!-- element button ends-->
+        </div>
+      </div>
+      <!-- Element ends-->
+    </div>
+    
+    
 
 
 	<!--section 1 ends here -->
