--- a/WatchFun/src/main/resources/templates/Welcome.html
+++ b/WatchFun/src/main/resources/templates/Welcome.html
@@ -185,7 +185,7 @@
   </div>
   <div class="section-title text-center center">
   <div class="about-text">
-          <a href="#portfolio" class="btn btn-default btn-lg page-scroll">More+</a> </div>      
+          <a th:href="@{movies}" class="btn btn-default btn-lg page-scroll">More+</a> </div>      
     </div>
 </div>
 
@@ -297,7 +297,7 @@
   </div>
   <div class="section-title text-center center">
   <div class="about-text">
-          <a href="#portfolio" class="btn btn-default btn-lg page-scroll">More+</a> </div>      
+          <a th:href="@{novels}" class="btn btn-default btn-lg page-scroll">More+</a> </div>      
     </div>
 </div>
 
@@ -411,7 +411,7 @@
   </div>
  <div class="section-title text-center center">
   <div class="about-text">
-          <a href="#portfolio" class="btn btn-default btn-lg page-scroll">More+</a> </div>      
+          <a th:href="@{tvseries}" class="btn btn-default btn-lg page-scroll">More+</a> </div>      
     </div>
 </div>
 
