--- a/WatchFun/src/main/resources/templates/tvseries_info.html
+++ b/WatchFun/src/main/resources/templates/tvseries_info.html
@@ -51,11 +51,11 @@
 
 
 						<div class="col-sm-3 ">
-							<img th:src="@{${movieObject.img}}" class=" img-responsive">
+							<img th:src="@{${tvserieObject.img}}" class=" img-responsive">
 							<div>
 								<!-- element button-->
 								<ol class="downloadButton ">
-									<li><a th:href="@{${movieObject.downloadLink}}"><span
+									<li><a th:href="@{${tvserieObject.downloadLink}}"><span
 											class="glyphicon glyphicon-download-alt"></span> Download</a></li>
 								</ol>
 								<!-- element button ends-->
@@ -65,7 +65,7 @@
 							<div class="row">
 								<div class="allData">
 									<h1>
-										<b th:text="${movieObject.name}"></b>
+										<b th:text="${tvserieObject.name}"></b>
 									</h1>
 								</div>
 								<div class="col-sm-3">
@@ -73,17 +73,17 @@
 									<div class="allData">
 										<h4>
 											<span class="glyphicon glyphicon-film"
-												th:text="${movieObject.language}"></span>
+												th:text="${tvserieObject.language}"></span>
 										</h4>
 										<h4>Genre:</h4>
 										<table class="genreData">
-											<tr th:each="genre:${movieObject.genreSet}">
+											<tr th:each="genre:${tvserieObject.genreSet}">
 												<td th:text="${genre.name}"></td>
 											</tr>
 										</table>
 										<h4 class="textAllign">
 											<span class="glyphicon glyphicon-heart"
-												th:text="${movieObject.rating}"></span>
+												th:text="${tvserieObject.rating}"></span>
 										</h4>
 
 									</div>
@@ -92,10 +92,10 @@
 								</div>
 								<div class="col-sm-9">
 									<div class="allData">
-										<h4 th:text="${movieObject.year}"></h4>
-										<h4 class="textAllign" th:text="${movieObject.status}"></h4>
-										<h4 class="textAllign" th:text="${movieObject.size}+' MB'"></h4>
-										<h4 class="textAllign" th:text="'Rs '+${movieObject.price}"></h4>
+										<h4 th:text="${tvserieObject.year}"></h4>
+										<h4 class="textAllign" th:text="${tvserieObject.status}"></h4>
+										<h4 class="textAllign" th:text="${tvserieObject.size}+' MB'"></h4>
+										<h4 class="textAllign" th:text="'Rs '+${tvserieObject.price}"></h4>
 									</div>
 								</div>
 
@@ -113,13 +113,13 @@
 
 						<div class="col-sm-4">
 							<h4>Synopsis:</h4>
-							<p class="genreData" th:text="${movieObject.synopsis}"></p>
+							<p class="genreData" th:text="${tvserieObject.synopsis}"></p>
 
 						</div>
 						<div class="col-sm-4">
 							<h4>Auteur:</h4>
 							<table class="genreData">
-								<tr th:each="auteur:${movieObject.auteurSet}">
+								<tr th:each="auteur:${tvserieObject.auteurSet}">
 									<td><a th:text="${auteur.name}"
 										th:href="@{${auteur.link}} " th:target="_blank"> </a></td>
 								</tr>
@@ -128,7 +128,7 @@
 						<div class="col-sm-4">
 							<h4>Cast:</h4>
 							<table class="genreData">
-								<tr th:each="cast:${movieObject.castSet}">
+								<tr th:each="cast:${tvserieObject.castSet}">
 									<td><a th:text="${cast.name}" th:href="@{${cast.link}}"
 										th:target="_blank"> </a></td>
 								</tr>
